# SouthParkScriptGen-LangGraph

./: .gitignore  AGENT_CHANGELOG.txt  AGENT_KNOWLEDGE.md  ARCHITECTURE.md  CLAUDE_PROJECT_KNOWLEDGE.md  CURSOR_CHANGELOG.md  LLM_TOOLS_PROPOSAL.md  README.md  USAGE_GUIDE.md  WORKFLOW_DIAGRAM.md  main.py  plan copy.md  plan.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_episode_yaml.py
.claude/: settings.local.json
.otherpersonas/: Andy Samburg.yaml  Bo Burnham.yaml  Chris Farley.yaml  Conan O'Brian.yaml  Dave Chappelle.yaml  Deep Thought.yaml  Jerry Seinfeld.yaml  John Mulaney.yaml  Louis C.K..yaml  Mitch Hedberg.yaml  Nancy Pimental.yaml  Pam Brady.yaml  Sarah Silverman.yaml  Tina Fey.yaml  Vernon Chatman.yaml
configs/: Andy Samburg.yaml  Bill Hader.yaml  Deep Thought.yaml  Matt Stone.yaml  Tina Fey.yaml  Trey Parker.yaml
docs/: CLAUDE.md  EPISODE_CREATION_GUIDELINES.md  EPISODE_RAG_GUIDE.md  GEMINI.md  README.md
episode_summaries/: README.md  s01e01_cartman_gets_an_anal_probe.yaml  s01e02_weight_gain_4000.yaml  s01e03_volcano.yaml  s01e04_big_gay_als_big_gay_boat_ride.yaml  s01e05_an_elephant_makes_love_to_a_pig.yaml  s01e06_death.yaml  s01e07_pinkeye.yaml  s01e08_starvin_marvin.yaml  s01e09_mr_hankey_the_christmas_poo.yaml  s01e10_damien.yaml  s01e11_toms_rhinoplasty.yaml  s01e12_mecha_streisand.yaml  s01e13_cartmans_mom_is_a_dirty_slut.yaml  s02e01_terrance_and_phillip_in_not_without_my_anus.yaml  s02e02_cartmans_mom_is_still_a_dirty_slut.yaml  s02e03_ikes_wee_wee.yaml  s02e04_chickenlover.yaml  s02e05_conjoined_fetus_lady.yaml  s02e08_summer_sucks.yaml  (+12 more)
(+119 files in other folders)
